Fixed downloads icon not showing up (only in 0.2, stable is working fine).

--- a/system/modules/isotope/html/backend.css
+++ b/system/modules/isotope/html/backend.css
@@ -18,7 +18,7 @@
 .w50h{height:auto}
 .tl_tree .tl_left a{float:left;margin-top:10px}
 .tl_tree .tl_right{height:auto;text-align:right}
-.iso_product{margin-top:2px;margin-left:22px;margin-bottom:2px;width:530px}
+.iso_product{margin-top:2px;margin-left:22px;margin-bottom:2px;width:500px}
 .iso_product .thumbnail{padding-right:5px;float:left;width:34px;height:34px}
 .iso_product ul{margin-left:34px}
 .iso_product p{font-weight:700;margin:0 0 5px;padding:0}
